update docs